✔️ Toast Generator done ...

--- a/ToastNotification/index.html
+++ b/ToastNotification/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toast Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        
+    </div>
+    <button id="btnToast">Click Me to Generate a Toast</button>
 </body>
+
+<script src="app.js"></script>
 </html>
