✔️ Auto-Text Writer done ...

--- a/AutoWriteText/index.html
+++ b/AutoWriteText/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Auto Text Writer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        
+    </div>
 </body>
+<script src="app.js"></script>
 </html>
