:white_check_mark:  Heart Rain done ...

--- a/HeartRain/index.html
+++ b/HeartRain/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Heart Rain</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 </body>
+<script src="app.js"></script>
 </html>
