--- a/BackgroundChanger/index.html
+++ b/BackgroundChanger/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Background Changer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button id="bgBTN">Change BG</button>
 </body>
+<script src="app.js"></script>
 </html>
