--- a/DarkModeToggle/index.html
+++ b/DarkModeToggle/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dark Mode Toggler</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <input type='checkbox' id='toggle'/>
+    <label for='toggle'>Night</label>
+
+    <h1>Muhammad Sameem</h1>
 </body>
+<script src="app.js"></script>
 </html>
