✔️ Dark-Mode Toggler done ...

--- a/DarkModeToggle/index.html
+++ b/DarkModeToggle/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type='checkbox' id='toggle'/>
-    <label for='toggle'>Night</label>
-
+    <div id="wrapper">
+        <input type='checkbox' id='toggle'/>
+        <label for='toggle'>Night</label>
+    </div>
     <h1>Muhammad Sameem</h1>
 </body>
 <script src="app.js"></script>
