Added images for carousel

--- a/ImageCarousel/index.html
+++ b/ImageCarousel/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Carousel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="carousel">
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1593196742349-9ecdb8c6184f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" alt="">
+            <img src="https://images.unsplash.com/photo-1584158437523-c0fbf3cb142e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" alt="">
+            <img src="https://images.unsplash.com/photo-1594842834658-8be61fcdaa2e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" alt="">
+            <img src="https://images.unsplash.com/photo-1605070011568-331f7709957f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80" alt="">
+        </div>
+    </div>
 </body>
+<script src="app.js"></script>
 </html>
