Added the index.html (Project Gallery)

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Board</title>
+    <title>10 Mini Projects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="carousel">
+    <div id="wrapper">
         
     </div>
 </body>
