✔️ Sound board done ...

--- a/SoundBoard/index.html
+++ b/SoundBoard/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>Sound Board</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
+
 <body>
-    <div class="carousel">
-        
-    </div>
+    <audio id="DirilisMusic1" src="sounds/DirilisMusic1.mp3"></audio>
+    <audio id="DirilisMusic2" src="sounds/DirilisMusic2.mp3"></audio>
+    <audio id="DirilisMusic3" src="sounds/DirilisMusic3.mp3"></audio>
+    <audio id="DirilisMusic4" src="sounds/DirilisMusic4.mp3"></audio>
 </body>
 <script src="app.js"></script>
 </html>
