--- a/ZoomEffect/index.html
+++ b/ZoomEffect/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    <title>Zoom Effect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <div id="container">
+       <img src="https://images.unsplash.com/photo-1525547719571-a2d4ac8945e2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80" alt="" />
+   </div>
 </body>
+<script src="app.js"></script>
 </html>
