✔️ Background Changer done ...

--- a/BackgroundChanger/index.html
+++ b/BackgroundChanger/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="bgBTN">Change BG</button>
+    <button id="changebg">Change BG</button>
 </body>
 <script src="app.js"></script>
 </html>
