--- a/index.html
+++ b/index.html
@@ -3,12 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Mini Projects</title>
+    <title>10 Mini Projects Challenge</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="wrapper">
-        
+        <div>
+            <h1>Toast/Notification Generator</h1>
+            <img src="assets/images/toastgen.jpg" alt="Toast Generator" width="100%">
+        </div>
+        <div>
+            <h1>Project 2</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 3</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 4</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 5</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 6</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 7</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 8</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 9</h1>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1>Project 10</h1>
+            <img src="" alt="">
+        </div>
     </div>
 </body>
 <script src="app.js"></script>
