--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="assets/images/toastgen.jpg" alt="Toast Generator" width="100%">
         </div>
         <div>
-            <h1>Project 2</h1>
-            <img src="" alt="">
+            <h1>AutoText Writer</h1>
+            <img src="assets/images/autotextwrite.JPG" alt="" width="100%">
         </div>
         <div>
             <h1>Project 3</h1>
