:heavy_check_mark:  added gif preview ... updated styles

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="wrapper">
         <div>
             <h1>Toast/Notification Generator</h1>
-            <img src="assets/images/toastgen.jpg" alt="Toast Generator" width="100%">
+            <img src="assets/images/ToastGenerator.gif" alt="Toast Generator" width="100%">
         </div>
         <div>
             <h1>AutoText Writer</h1>
-            <img src="assets/images/autotextwrite.JPG" alt="" width="100%">
+            <img class="fixed" src="assets/images/autoTextWriter.gif" alt="" width="100%">
         </div>
         <div>
             <h1>Project 3</h1>
