added projects images (GIF)

--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
             <img class="fixed" src="assets/images/autoTextWriter.gif" alt="" width="100%">
         </div>
         <div>
-            <h1>Project 3</h1>
+            <h1>Background Changer</h1>
+            <img src="assets/images/BackgroundChanger.gif" alt="" width="100%">
+        </div>
+        <div>
+            <h1>Darkmode Toggle</h1>
             <img src="" alt="">
         </div>
         <div>
-            <h1>Project 4</h1>
+            <h1>Hamburger Menu</h1>
             <img src="" alt="">
         </div>
         <div>
-            <h1>Project 5</h1>
+            <h1>Heart Rain</h1>
             <img src="" alt="">
         </div>
         <div>
-            <h1>Project 6</h1>
+            <h1>Popup Modal</h1>
             <img src="" alt="">
         </div>
         <div>
-            <h1>Project 7</h1>
+            <h1>Image Carousel</h1>
             <img src="" alt="">
         </div>
         <div>
-            <h1>Project 8</h1>
+            <h1>Sound Board</h1>
             <img src="" alt="">
         </div>
         <div>
-            <h1>Project 9</h1>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h1>Project 10</h1>
+            <h1>Zoom Effect</h1>
             <img src="" alt="">
         </div>
     </div>
