:heavy_check_mark:  Added all projects

--- a/Hamburger/index.html
+++ b/Hamburger/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hamburger Menu</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="nav-wrapper">
+		<nav>
+			<div class="navigation">
+				<ul class="nav-items">
+					<li><a href="#"  target="_blank">Home</a></li>
+					<li><a href="#" target="_blank">Portfolio</a></li>
+					<li><a href="#" target="_blank">About</a></li>
+					<li><a href="#" target="_blank">Contact</a></li>
+				</ul>
+				<div class="nav-toogler"></div>
+			</div>
+		</nav>
+	</div>
 </body>
+<script src="app.js"></script>
 </html>
