--- a/index.html
+++ b/index.html
@@ -14,39 +14,39 @@
         </div>
         <div>
             <h1>AutoText Writer</h1>
-            <img class="fixed" src="assets/images/autoTextWriter.gif" alt="" width="100%">
+            <img class="fixed" src="assets/images/autoTextWriter.gif" alt="autoTextWriter" width="100%">
         </div>
         <div>
             <h1>Background Changer</h1>
-            <img src="assets/images/BackgroundChanger.gif" alt="" width="100%">
+            <img src="assets/images/BackgroundChanger.gif" alt="BackgroundChanger" width="100%">
         </div>
         <div>
             <h1>Darkmode Toggle</h1>
-            <img src="" alt="">
+            <img src="assets/images/DarkModeToggler.gif" alt="DarkModeToggler" width="100%">
         </div>
         <div>
             <h1>Hamburger Menu</h1>
-            <img src="" alt="">
+            <img src="assets/images/HamburgerMenu.gif" alt="HamburgerMenu" width="100%">
         </div>
         <div>
             <h1>Heart Rain</h1>
-            <img src="" alt="">
+            <img src="assets/images/HeartRain.gif" alt="HeartRain" width="100%">
         </div>
         <div>
             <h1>Popup Modal</h1>
-            <img src="" alt="">
+            <img src="assets/images/PopupModal.gif" alt="PopupModal" width="100%">
         </div>
         <div>
             <h1>Image Carousel</h1>
-            <img src="" alt="">
+            <img src="assets/images/ImageCarousel.gif" alt="ImageCarousel" width="100%">
         </div>
         <div>
             <h1>Sound Board</h1>
-            <img src="" alt="">
+            <img src="assets/images/SoundBoard.gif" alt="SoundBoard" width="100%">
         </div>
         <div>
             <h1>Zoom Effect</h1>
-            <img src="" alt="">
+            <img src="assets/images/ZoomEffect.gif" alt="ZoomEffect" width="100%">
         </div>
     </div>
 </body>
