:heavy_check_mark: added footer

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div>
+            &copy; 2020 Developed with ❤️ By Muhammad Sameem
+        </div>
+    </footer>
 </body>
 <script src="app.js"></script>
 </html>
