:heavy_check_mark: added heading & fixed some styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>10 Mini-Projects Challenge</h1>
     <div id="wrapper">
         <div>
             <a href="https://sameem420.github.io/10MiniProjectsChallenge/ToastNotification/" target="_blank">
